include/El/core/DistMatrix.h

/* An anonymous struct meant as a placeholder for ElementalMatrix<T>
   ----------------------------------------------------------------- */
typedef struct ElDistMatrix_iDummy* ElDistMatrix_i;
typedef struct ElDistMatrix_sDummy* ElDistMatrix_s;
typedef struct ElDistMatrix_dDummy* ElDistMatrix_d;
typedef struct ElDistMatrix_cDummy* ElDistMatrix_c;
typedef struct ElDistMatrix_zDummy* ElDistMatrix_z;
typedef const struct ElDistMatrix_iDummy* ElConstDistMatrix_i;
typedef const struct ElDistMatrix_sDummy* ElConstDistMatrix_s;
typedef const struct ElDistMatrix_dDummy* ElConstDistMatrix_d;
typedef const struct ElDistMatrix_cDummy* ElConstDistMatrix_c;
typedef const struct ElDistMatrix_zDummy* ElConstDistMatrix_z;
/* mpi::Comm AbstractDistMatrix<T>::PartialUnionRowComm() const
   ------------------------------------------------------------ */
EL_EXPORT ElError ElDistMatrixPartialUnionRowComm_i
( ElConstDistMatrix_i A, MPI_Comm* comm );
EL_EXPORT ElError ElDistMatrixPartialUnionRowComm_s
( ElConstDistMatrix_s A, MPI_Comm* comm );
EL_EXPORT ElError ElDistMatrixPartialUnionRowComm_d
( ElConstDistMatrix_d A, MPI_Comm* comm );
EL_EXPORT ElError ElDistMatrixPartialUnionRowComm_c
( ElConstDistMatrix_c A, MPI_Comm* comm );
EL_EXPORT ElError ElDistMatrixPartialUnionRowComm_z
( ElConstDistMatrix_z A, MPI_Comm* comm );
/* int AbstractDistMatrix<T>::ColStride() const
   -------------------------------------------- */
EL_EXPORT ElError ElDistMatrixColStride_i
( ElConstDistMatrix_i A, int* stride );
EL_EXPORT ElError ElDistMatrixColStride_s
( ElConstDistMatrix_s A, int* stride );
EL_EXPORT ElError ElDistMatrixColStride_d
( ElConstDistMatrix_d A, int* stride );
EL_EXPORT ElError ElDistMatrixColStride_c
( ElConstDistMatrix_c A, int* stride );
EL_EXPORT ElError ElDistMatrixColStride_z
( ElConstDistMatrix_z A, int* stride );
/* int AbstractDistMatrix<T>::RowStride() const
   -------------------------------------------- */
EL_EXPORT ElError ElDistMatrixRowStride_i
( ElConstDistMatrix_i A, int* stride );
EL_EXPORT ElError ElDistMatrixRowStride_s
( ElConstDistMatrix_s A, int* stride );
EL_EXPORT ElError ElDistMatrixRowStride_d
( ElConstDistMatrix_d A, int* stride );
EL_EXPORT ElError ElDistMatrixRowStride_c
( ElConstDistMatrix_c A, int* stride );
EL_EXPORT ElError ElDistMatrixRowStride_z
( ElConstDistMatrix_z A, int* stride );
/* int AbstractDistMatrix<T>::PartialColStride() const
   --------------------------------------------------- */
EL_EXPORT ElError ElDistMatrixPartialColStride_i
( ElConstDistMatrix_i A, int* stride );
EL_EXPORT ElError ElDistMatrixPartialColStride_s
( ElConstDistMatrix_s A, int* stride );
EL_EXPORT ElError ElDistMatrixPartialColStride_d
( ElConstDistMatrix_d A, int* stride );
EL_EXPORT ElError ElDistMatrixPartialColStride_c
( ElConstDistMatrix_c A, int* stride );
EL_EXPORT ElError ElDistMatrixPartialColStride_z
( ElConstDistMatrix_z A, int* stride );
/* int AbstractDistMatrix<T>::PartialRowStride() const
   --------------------------------------------------- */
EL_EXPORT ElError ElDistMatrixPartialRowStride_i
( ElConstDistMatrix_i A, int* stride );
EL_EXPORT ElError ElDistMatrixPartialRowStride_s
( ElConstDistMatrix_s A, int* stride );
EL_EXPORT ElError ElDistMatrixPartialRowStride_d
( ElConstDistMatrix_d A, int* stride );
EL_EXPORT ElError ElDistMatrixPartialRowStride_c
( ElConstDistMatrix_c A, int* stride );
EL_EXPORT ElError ElDistMatrixPartialRowStride_z
( ElConstDistMatrix_z A, int* stride );
/* int AbstractDistMatrix<T>::PartialUnionColStride() const
   -------------------------------------------------------- */
EL_EXPORT ElError ElDistMatrixPartialUnionColStride_i
( ElConstDistMatrix_i A, int* stride );
EL_EXPORT ElError ElDistMatrixPartialUnionColStride_s
( ElConstDistMatrix_s A, int* stride );
EL_EXPORT ElError ElDistMatrixPartialUnionColStride_d
( ElConstDistMatrix_d A, int* stride );
EL_EXPORT ElError ElDistMatrixPartialUnionColStride_c
( ElConstDistMatrix_c A, int* stride );
EL_EXPORT ElError ElDistMatrixPartialUnionColStride_z
( ElConstDistMatrix_z A, int* stride );
/* int AbstractDistMatrix<T>::PartialUnionRowStride() const
   -------------------------------------------------------- */
EL_EXPORT ElError ElDistMatrixPartialUnionRowStride_i
( ElConstDistMatrix_i A, int* stride );
EL_EXPORT ElError ElDistMatrixPartialUnionRowStride_s
( ElConstDistMatrix_s A, int* stride );
EL_EXPORT ElError ElDistMatrixPartialUnionRowStride_d
( ElConstDistMatrix_d A, int* stride );
EL_EXPORT ElError ElDistMatrixPartialUnionRowStride_c
( ElConstDistMatrix_c A, int* stride );
EL_EXPORT ElError ElDistMatrixPartialUnionRowStride_z
( ElConstDistMatrix_z A, int* stride );
/* int AbstractDistMatrix<T>::DistSize() const
   ------------------------------------------- */
EL_EXPORT ElError ElDistMatrixDistSize_i
( ElConstDistMatrix_i A, int* commSize );
EL_EXPORT ElError ElDistMatrixDistSize_s
( ElConstDistMatrix_s A, int* commSize );
EL_EXPORT ElError ElDistMatrixDistSize_d
( ElConstDistMatrix_d A, int* commSize );
EL_EXPORT ElError ElDistMatrixDistSize_c
( ElConstDistMatrix_c A, int* commSize );
EL_EXPORT ElError ElDistMatrixDistSize_z
( ElConstDistMatrix_z A, int* commSize );
/* int AbstractDistMatrix<T>::CrossSize() const
   -------------------------------------------- */
EL_EXPORT ElError ElDistMatrixCrossSize_i
( ElConstDistMatrix_i A, int* commSize );
EL_EXPORT ElError ElDistMatrixCrossSize_s
( ElConstDistMatrix_s A, int* commSize );
EL_EXPORT ElError ElDistMatrixCrossSize_d
( ElConstDistMatrix_d A, int* commSize );
EL_EXPORT ElError ElDistMatrixCrossSize_c
( ElConstDistMatrix_c A, int* commSize );
EL_EXPORT ElError ElDistMatrixCrossSize_z
( ElConstDistMatrix_z A, int* commSize );
/* int AbstractDistMatrix<T>::RedundantSize() const
   ------------------------------------------------ */
EL_EXPORT ElError ElDistMatrixRedundantSize_i
( ElConstDistMatrix_i A, int* commSize );
EL_EXPORT ElError ElDistMatrixRedundantSize_s
( ElConstDistMatrix_s A, int* commSize );
EL_EXPORT ElError ElDistMatrixRedundantSize_d
( ElConstDistMatrix_d A, int* commSize );
EL_EXPORT ElError ElDistMatrixRedundantSize_c
( ElConstDistMatrix_c A, int* commSize );
EL_EXPORT ElError ElDistMatrixRedundantSize_z
( ElConstDistMatrix_z A, int* commSize );
/* T AbstractDistMatrix<T>::Get( Int i, Int j ) const
   -------------------------------------------------- */
EL_EXPORT ElError ElDistMatrixGet_i
( ElConstDistMatrix_i A, ElInt i, ElInt j, ElInt* val );
EL_EXPORT ElError ElDistMatrixGet_s
( ElConstDistMatrix_s A, ElInt i, ElInt j, float* val );
EL_EXPORT ElError ElDistMatrixGet_d
( ElConstDistMatrix_d A, ElInt i, ElInt j, double* val );
EL_EXPORT ElError ElDistMatrixGet_c
( ElConstDistMatrix_c A, ElInt i, ElInt j, complex_float* val );
EL_EXPORT ElError ElDistMatrixGet_z
( ElConstDistMatrix_z A, ElInt i, ElInt j, complex_double* val );
/* Base<T> AbstractDistMatrix<T>::GetRealPart( Int i, Int j ) const
   ---------------------------------------------------------------- */
EL_EXPORT ElError ElDistMatrixGetRealPart_c
( ElConstDistMatrix_c A, ElInt i, ElInt j, float* val );
EL_EXPORT ElError ElDistMatrixGetRealPart_z
( ElConstDistMatrix_z A, ElInt i, ElInt j, double* val );
/* Base<T> AbstractDistMatrix<T>::GetImagPart( Int i, Int j ) const
   ---------------------------------------------------------------- */
EL_EXPORT ElError ElDistMatrixGetImagPart_c
( ElConstDistMatrix_c A, ElInt i, ElInt j, float* val );
EL_EXPORT ElError ElDistMatrixGetImagPart_z
( ElConstDistMatrix_z A, ElInt i, ElInt j, double* val );
/* void AbstractDistMatrix<T>::Set( Int i, Int j, T alpha )
   -------------------------------------------------------- */
EL_EXPORT ElError ElDistMatrixSet_i
( ElDistMatrix_i A, ElInt i, ElInt j, ElInt alpha );
EL_EXPORT ElError ElDistMatrixSet_s
( ElDistMatrix_s A, ElInt i, ElInt j, float alpha );
EL_EXPORT ElError ElDistMatrixSet_d
( ElDistMatrix_d A, ElInt i, ElInt j, double alpha );
EL_EXPORT ElError ElDistMatrixSet_c
( ElDistMatrix_c A, ElInt i, ElInt j, complex_float alpha );
EL_EXPORT ElError ElDistMatrixSet_z
( ElDistMatrix_z A, ElInt i, ElInt j, complex_double alpha );
/* void AbstractDistMatrix<T>::SetRealPart( Int i, Int j, Base<T> alpha )
   ---------------------------------------------------------------------- */
EL_EXPORT ElError ElDistMatrixSetRealPart_c
( ElDistMatrix_c A, ElInt i, ElInt j, float alpha );
EL_EXPORT ElError ElDistMatrixSetRealPart_z
( ElDistMatrix_z A, ElInt i, ElInt j, double alpha );
/* void AbstractDistMatrix<T>::SetImagPart( Int i, Int j, Base<T> alpha )
   ---------------------------------------------------------------------- */
EL_EXPORT ElError ElDistMatrixSetImagPart_c
( ElDistMatrix_c A, ElInt i, ElInt j, float alpha );
EL_EXPORT ElError ElDistMatrixSetImagPart_z
( ElDistMatrix_z A, ElInt i, ElInt j, double alpha );
/* void AbstractDistMatrix<T>::Update( Int i, Int j, T alpha )
   ----------------------------------------------------------- */
EL_EXPORT ElError ElDistMatrixUpdate_i
( ElDistMatrix_i A, ElInt i, ElInt j, ElInt alpha );
EL_EXPORT ElError ElDistMatrixUpdate_s
( ElDistMatrix_s A, ElInt i, ElInt j, float alpha );
EL_EXPORT ElError ElDistMatrixUpdate_d
( ElDistMatrix_d A, ElInt i, ElInt j, double alpha );
EL_EXPORT ElError ElDistMatrixUpdate_c
( ElDistMatrix_c A, ElInt i, ElInt j, complex_float alpha );
EL_EXPORT ElError ElDistMatrixUpdate_z
( ElDistMatrix_z A, ElInt i, ElInt j, complex_double alpha );
/* void AbstractDistMatrix<T>::UpdateRealPart( Int i, Int j, Base<T> alpha )
   ------------------------------------------------------------------------- */
EL_EXPORT ElError ElDistMatrixUpdateRealPart_c
( ElDistMatrix_c A, ElInt i, ElInt j, float alpha );
EL_EXPORT ElError ElDistMatrixUpdateRealPart_z
( ElDistMatrix_z A, ElInt i, ElInt j, double alpha );