python/core/DistMatrix.py


  lib.ElDistMatrixPartialUnionRowComm_i.argtypes = \
  lib.ElDistMatrixPartialUnionRowComm_s.argtypes = \
  lib.ElDistMatrixPartialUnionRowComm_d.argtypes = \
  lib.ElDistMatrixPartialUnionRowComm_c.argtypes = \
  lib.ElDistMatrixPartialUnionRowComm_z.argtypes = \
    [c_void_p,POINTER(mpi.Comm)]
  def PartialUnionRowComm(self):
    comm = mpi.Comm()
    args = [self.obj,pointer(comm)]
    if   self.tag == iTag: lib.ElDistMatrixPartialUnionRowComm_i(*args)
    elif self.tag == sTag: lib.ElDistMatrixPartialUnionRowComm_s(*args)
    elif self.tag == dTag: lib.ElDistMatrixPartialUnionRowComm_d(*args)
    elif self.tag == cTag: lib.ElDistMatrixPartialUnionRowComm_c(*args)
    elif self.tag == zTag: lib.ElDistMatrixPartialUnionRowComm_z(*args)
    else: DataExcept()
    return comm

  lib.ElDistMatrixColStride_i.argtypes = \
  lib.ElDistMatrixColStride_s.argtypes = \
  lib.ElDistMatrixColStride_d.argtypes = \
  lib.ElDistMatrixColStride_c.argtypes = \
  lib.ElDistMatrixColStride_z.argtypes = \
    [c_void_p,POINTER(c_int)]
  def ColStride(self):
    stride = c_int()
    args = [self.obj,pointer(stride)]
    if   self.tag == iTag: lib.ElDistMatrixColStride_i(*args)
    elif self.tag == sTag: lib.ElDistMatrixColStride_s(*args)
    elif self.tag == dTag: lib.ElDistMatrixColStride_d(*args)
    elif self.tag == cTag: lib.ElDistMatrixColStride_c(*args)
    elif self.tag == zTag: lib.ElDistMatrixColStride_z(*args)
    else: DataExcept()
    return stride.value

  lib.ElDistMatrixRowStride_i.argtypes = \
  lib.ElDistMatrixRowStride_s.argtypes = \
  lib.ElDistMatrixRowStride_d.argtypes = \
  lib.ElDistMatrixRowStride_c.argtypes = \
  lib.ElDistMatrixRowStride_z.argtypes = \
    [c_void_p,POINTER(c_int)]
  def RowStride(self):
    stride = c_int()
    args = [self.obj,pointer(stride)]
    if   self.tag == iTag: lib.ElDistMatrixRowStride_i(*args)
    elif self.tag == sTag: lib.ElDistMatrixRowStride_s(*args)
    elif self.tag == dTag: lib.ElDistMatrixRowStride_d(*args)
    elif self.tag == cTag: lib.ElDistMatrixRowStride_c(*args)
    elif self.tag == zTag: lib.ElDistMatrixRowStride_z(*args)
    else: DataExcept()
    return stride.value

  lib.ElDistMatrixPartialColStride_i.argtypes = \
  lib.ElDistMatrixPartialColStride_s.argtypes = \
  lib.ElDistMatrixPartialColStride_d.argtypes = \
  lib.ElDistMatrixPartialColStride_c.argtypes = \
  lib.ElDistMatrixPartialColStride_z.argtypes = \
    [c_void_p,POINTER(c_int)]
  def PartialColStride(self):
    stride = c_int()
    args = [self.obj,pointer(stride)]
    if   self.tag == iTag: lib.ElDistMatrixPartialColStride_i(*args)
    elif self.tag == sTag: lib.ElDistMatrixPartialColStride_s(*args)
    elif self.tag == dTag: lib.ElDistMatrixPartialColStride_d(*args)
    elif self.tag == cTag: lib.ElDistMatrixPartialColStride_c(*args)
    elif self.tag == zTag: lib.ElDistMatrixPartialColStride_z(*args)
    else: DataExcept()
    return stride.value

  lib.ElDistMatrixPartialRowStride_i.argtypes = \
  lib.ElDistMatrixPartialRowStride_s.argtypes = \
  lib.ElDistMatrixPartialRowStride_d.argtypes = \
  lib.ElDistMatrixPartialRowStride_c.argtypes = \
  lib.ElDistMatrixPartialRowStride_z.argtypes = \
    [c_void_p,POINTER(c_int)]
  def PartialRowStride(self):
    stride = c_int()
    args = [self.obj,pointer(stride)]
    if   self.tag == iTag: lib.ElDistMatrixPartialRowStride_i(*args)
    elif self.tag == sTag: lib.ElDistMatrixPartialRowStride_s(*args)
    elif self.tag == dTag: lib.ElDistMatrixPartialRowStride_d(*args)
    elif self.tag == cTag: lib.ElDistMatrixPartialRowStride_c(*args)
    elif self.tag == zTag: lib.ElDistMatrixPartialRowStride_z(*args)
    else: DataExcept()
    return stride.value

  lib.ElDistMatrixPartialUnionColStride_i.argtypes = \
  lib.ElDistMatrixPartialUnionColStride_s.argtypes = \
  lib.ElDistMatrixPartialUnionColStride_d.argtypes = \
  lib.ElDistMatrixPartialUnionColStride_c.argtypes = \
  lib.ElDistMatrixPartialUnionColStride_z.argtypes = \
    [c_void_p,POINTER(c_int)]
  def PartialUnionColStride(self):
    stride = c_int()
    args = [self.obj,pointer(stride)]
    if   self.tag == iTag: lib.ElDistMatrixPartialUnionColStride_i(*args)
    elif self.tag == sTag: lib.ElDistMatrixPartialUnionColStride_s(*args)
    elif self.tag == dTag: lib.ElDistMatrixPartialUnionColStride_d(*args)
    elif self.tag == cTag: lib.ElDistMatrixPartialUnionColStride_c(*args)
    elif self.tag == zTag: lib.ElDistMatrixPartialUnionColStride_z(*args)
    else: DataExcept()
    return stride.value

  lib.ElDistMatrixPartialUnionRowStride_i.argtypes = \
  lib.ElDistMatrixPartialUnionRowStride_s.argtypes = \
  lib.ElDistMatrixPartialUnionRowStride_d.argtypes = \
  lib.ElDistMatrixPartialUnionRowStride_c.argtypes = \
  lib.ElDistMatrixPartialUnionRowStride_z.argtypes = \
    [c_void_p,POINTER(c_int)]
  def PartialUnionRowStride(self):
    stride = c_int()
    args = [self.obj,pointer(stride)]
    if   self.tag == iTag: lib.ElDistMatrixPartialUnionRowStride_i(*args)
    elif self.tag == sTag: lib.ElDistMatrixPartialUnionRowStride_s(*args)
    elif self.tag == dTag: lib.ElDistMatrixPartialUnionRowStride_d(*args)
    elif self.tag == cTag: lib.ElDistMatrixPartialUnionRowStride_c(*args)
    elif self.tag == zTag: lib.ElDistMatrixPartialUnionRowStride_z(*args)
    else: DataExcept()
    return stride.value

  lib.ElDistMatrixDistSize_i.argtypes = \
  lib.ElDistMatrixDistSize_s.argtypes = \
  lib.ElDistMatrixDistSize_d.argtypes = \
  lib.ElDistMatrixDistSize_c.argtypes = \
  lib.ElDistMatrixDistSize_z.argtypes = \
    [c_void_p,POINTER(c_int)]
  def DistSize(self):
    size = c_int()
    args = [self.obj,pointer(size)]
    if   self.tag == iTag: lib.ElDistMatrixDistSize_i(*args)
    elif self.tag == sTag: lib.ElDistMatrixDistSize_s(*args)
    elif self.tag == dTag: lib.ElDistMatrixDistSize_d(*args)
    elif self.tag == cTag: lib.ElDistMatrixDistSize_c(*args)
    elif self.tag == zTag: lib.ElDistMatrixDistSize_z(*args)
    else: DataExcept()
    return size.value

  lib.ElDistMatrixCrossSize_i.argtypes = \
  lib.ElDistMatrixCrossSize_s.argtypes = \
  lib.ElDistMatrixCrossSize_d.argtypes = \
  lib.ElDistMatrixCrossSize_c.argtypes = \
  lib.ElDistMatrixCrossSize_z.argtypes = \
    [c_void_p,POINTER(iType)]
  def CrossSize(self):
    size = c_int()
    args = [self.obj,pointer(size)]
    if   self.tag == iTag: lib.ElDistMatrixCrossSize_i(*args)
    elif self.tag == sTag: lib.ElDistMatrixCrossSize_s(*args)
    elif self.tag == dTag: lib.ElDistMatrixCrossSize_d(*args)
    elif self.tag == cTag: lib.ElDistMatrixCrossSize_c(*args)
    elif self.tag == zTag: lib.ElDistMatrixCrossSize_z(*args)
    else: DataExcept()
    return size.value
  
  lib.ElDistMatrixRedundantSize_i.argtypes = \
  lib.ElDistMatrixRedundantSize_s.argtypes = \
  lib.ElDistMatrixRedundantSize_d.argtypes = \
  lib.ElDistMatrixRedundantSize_c.argtypes = \
  lib.ElDistMatrixRedundantSize_z.argtypes = \
    [c_void_p,POINTER(c_int)]
  def RedundantSize(self):
    size = c_int()
    args = [self.obj,pointer(size)]
    if   self.tag == iTag: lib.ElDistMatrixRedundantSize_i(*args)
    elif self.tag == sTag: lib.ElDistMatrixRedundantSize_s(*args)
    elif self.tag == dTag: lib.ElDistMatrixRedundantSize_d(*args)
    elif self.tag == cTag: lib.ElDistMatrixRedundantSize_c(*args)
    elif self.tag == zTag: lib.ElDistMatrixRedundantSize_z(*args)
    else: DataExcept()
    return size.value

  lib.ElDistMatrixGet_i.argtypes = [c_void_p,iType,iType,POINTER(iType)]
  lib.ElDistMatrixGet_s.argtypes = [c_void_p,iType,iType,POINTER(sType)]
  lib.ElDistMatrixGet_d.argtypes = [c_void_p,iType,iType,POINTER(dType)]
  lib.ElDistMatrixGet_c.argtypes = [c_void_p,iType,iType,POINTER(cType)]
  lib.ElDistMatrixGet_z.argtypes = [c_void_p,iType,iType,POINTER(zType)]
  def Get(self,i,j):
    value = TagToType(self.tag)()
    args = [self.obj,i,j,pointer(value)]
    if   self.tag == iTag: lib.ElDistMatrixGet_i(*args)
    elif self.tag == sTag: lib.ElDistMatrixGet_s(*args)
    elif self.tag == dTag: lib.ElDistMatrixGet_d(*args)
    elif self.tag == cTag: lib.ElDistMatrixGet_c(*args)
    elif self.tag == zTag: lib.ElDistMatrixGet_z(*args)
    else: DataExcept()
    return ScalarData(value)

  lib.ElDistMatrixGetRealPart_c.argtypes = [c_void_p,iType,iType,POINTER(sType)]
  lib.ElDistMatrixGetRealPart_z.argtypes = [c_void_p,iType,iType,POINTER(dType)]
  def GetRealPart(self,i,j):
    value = TagToType(Base(self.tag))()
    args = [self.obj,i,j,pointer(value)]
    if   self.tag == iTag: lib.ElDistMatrixGet_i(*args)
    elif self.tag == sTag: lib.ElDistMatrixGet_s(*args)
    elif self.tag == dTag: lib.ElDistMatrixGet_d(*args)
    elif self.tag == cTag: lib.ElDistMatrixGetRealPart_c(*args)
    elif self.tag == zTag: lib.ElDistMatrixGetRealPart_z(*args)
    else: DataExcept()
    return ScalarData(value)

  lib.ElDistMatrixGetImagPart_c.argtypes = [c_void_p,iType,iType,POINTER(sType)]
  lib.ElDistMatrixGetImagPart_z.argtypes = [c_void_p,iType,iType,POINTER(dType)]
  def GetImagPart(self,i,j):
    if   self.tag == iTag: return iType(0).value
    elif self.tag == sTag: return sType(0).value
    elif self.tag == dTag: return dType(0).value
    elif self.tag == cTag:
      value = sType()
      lib.ElDistMatrixGetRealPart_c(self.obj,i,j,pointer(value))
      return value.value
    elif self.tag == zTag:
      value = dType()
      lib.ElDistMatrixGetRealPart_z(self.obj,i,j,pointer(value))
      return value.value
    else: DataExcept()

  lib.ElDistMatrixSet_i.argtypes = [c_void_p,iType,iType,iType]
  lib.ElDistMatrixSet_s.argtypes = [c_void_p,iType,iType,sType]
  lib.ElDistMatrixSet_d.argtypes = [c_void_p,iType,iType,dType]
  lib.ElDistMatrixSet_c.argtypes = [c_void_p,iType,iType,cType]
  lib.ElDistMatrixSet_z.argtypes = [c_void_p,iType,iType,zType]
  def Set(self,i,j,value):
    args = [self.obj,i,j,value]
    if   self.tag == iTag: lib.ElDistMatrixSet_i(*args)
    elif self.tag == sTag: lib.ElDistMatrixSet_s(*args)
    elif self.tag == dTag: lib.ElDistMatrixSet_d(*args)
    elif self.tag == cTag: lib.ElDistMatrixSet_c(*args)
    elif self.tag == zTag: lib.ElDistMatrixSet_z(*args)
    else: DataExcept()

  lib.ElDistMatrixSetRealPart_c.argtypes = \
  lib.ElDistMatrixSetRealPart_z.argtypes = \
    [c_void_p,iType,iType,dType]
  def SetRealPart(self,i,j,value):
    args = [self.obj,i,j,value]
    if   self.tag == cTag: lib.ElDistMatrixSetRealPart_c(*args)
    elif self.tag == zTag: lib.ElDistMatrixSetRealPart_z(*args)
    else: self.Set(i,j,value)

  lib.ElDistMatrixSetImagPart_c.argtypes = [c_void_p,iType,iType,sType]
  lib.ElDistMatrixSetImagPart_z.argtypes = [c_void_p,iType,iType,dType]
  def SetImagPart(self,i,j,value):
    args = [self.obj,i,j,value]
    if   self.tag == cTag: lib.ElDistMatrixSetImagPart_c(*args)
    elif self.tag == zTag: lib.ElDistMatrixSetImagPart_z(*args)
    else: raise Exception('Cannot set imaginary part of a real datatype')

  lib.ElDistMatrixUpdate_i.argtypes = [c_void_p,iType,iType,iType]
  lib.ElDistMatrixUpdate_s.argtypes = [c_void_p,iType,iType,sType]
  lib.ElDistMatrixUpdate_d.argtypes = [c_void_p,iType,iType,dType]
  lib.ElDistMatrixUpdate_c.argtypes = [c_void_p,iType,iType,cType]
  lib.ElDistMatrixUpdate_z.argtypes = [c_void_p,iType,iType,zType]
  def Update(self,i,j,value):
    args = [self.obj,i,j,value]
    if   self.tag == iTag: lib.ElDistMatrixUpdate_i(*args)
    elif self.tag == sTag: lib.ElDistMatrixUpdate_s(*args)
    elif self.tag == dTag: lib.ElDistMatrixUpdate_d(*args)
    elif self.tag == cTag: lib.ElDistMatrixUpdate_c(*args)
    elif self.tag == zTag: lib.ElDistMatrixUpdate_z(*args)
    else: DataExcept()

  lib.ElDistMatrixUpdateRealPart_c.argtypes = [c_void_p,iType,iType,sType]
  lib.ElDistMatrixUpdateRealPart_z.argtypes = [c_void_p,iType,iType,dType]
  def UpdateRealPart(self,i,j,value):
    args = [self.obj,i,j,value]
    if   self.tag == cTag: lib.ElDistMatrixUpdateRealPart_c(*args)
    elif self.tag == zTag: lib.ElDistMatrixUpdateRealPart_z(*args)
    else: self.Update(i,j,value)
